# catalogy

./: .gitignore  Cargo.toml  README.md  config.toml  extract_frames.py  generate_samples.py  ingest.py  requirements.txt  search.py  web.py
.github/workflows/: ci.yml
crates/catalogy-catalog/: Cargo.toml
crates/catalogy-catalog/src/: catalog.rs  lib.rs  record.rs  schema.rs
crates/catalogy-core/: Cargo.toml
crates/catalogy-core/src/: config.rs  error.rs  types.rs
crates/catalogy-dedup/: Cargo.toml
crates/catalogy-dedup/src/: cross_video.rs  exact.rs  lib.rs  report.rs  visual.rs
crates/catalogy-embed/: Cargo.toml
crates/catalogy-embed/src/: image_encoder.rs  lib.rs  session.rs  text_encoder.rs  worker.rs
crates/catalogy-extract/: Cargo.toml
crates/catalogy-extract/src/: extract.rs  lib.rs  thumbnail.rs  worker.rs
crates/catalogy-metadata/: Cargo.toml
crates/catalogy-metadata/src/: image_metadata.rs  lib.rs  video_metadata.rs  worker.rs
crates/catalogy-queue/: Cargo.toml
crates/catalogy-queue/src/: change.rs  db.rs  lib.rs
crates/catalogy-scanner/: Cargo.toml
crates/catalogy-scanner/src/: lib.rs
crates/catalogy-search/: Cargo.toml
crates/catalogy-search/src/: engine.rs  lib.rs  query.rs
crates/catalogy-server/: Cargo.toml
crates/catalogy-server/src/: api.rs  app.rs  lib.rs
crates/catalogy-server/src/static_files/: app.js  components.js  index.html  pages.js  style.css
crates/catalogy-setup/: Cargo.toml
crates/catalogy-setup/src/: lib.rs
crates/catalogy-transcode/: Cargo.toml
crates/catalogy-transcode/src/: decision.rs  lib.rs  policy.rs  transcoder.rs  verify.rs  worker.rs
docs/planning/: 01-one-pager.md  02-hld.md  03-lld.md  04-implementation-plan.md  05-progress.md  README.md
scripts/: export_clip.py
src/: main.rs
tests/: extract_integration.rs  metadata_integration.rs  scan_integration.rs
tests/fixtures/: ffprobe_sample.json
