[package]
name = "catalogy-catalog"
version = "0.1.0"
edition = "2021"

[dependencies]
catalogy-core = { path = "../catalogy-core" }
lancedb = "0.15"
arrow = { version = "53", default-features = false }
arrow-array = "53"
arrow-schema = "53"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
chrono = "0.4"
uuid = { version = "1", features = ["v7"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3"
