[package]
name = "catalogy-dedup"
version = "0.1.0"
edition = "2021"

[dependencies]
catalogy-core = { path = "../catalogy-core" }
catalogy-queue = { path = "../catalogy-queue" }
catalogy-catalog = { path = "../catalogy-catalog" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
