[package]
name = "catalogy-extract"
version = "0.1.0"
edition = "2021"

[dependencies]
catalogy-core = { path = "../catalogy-core" }
catalogy-queue = { path = "../catalogy-queue" }
tempfile = "3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"
