[package]
name = "catalogy-metadata"
version = "0.1.0"
edition = "2021"

[dependencies]
catalogy-core = { path = "../catalogy-core" }
catalogy-queue = { path = "../catalogy-queue" }
kamadak-exif = "0.5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "tiff", "bmp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3"
