[package]
name = "catalogy-server"
version = "0.1.0"
edition = "2021"

[dependencies]
catalogy-core = { path = "../catalogy-core" }
catalogy-search = { path = "../catalogy-search" }
catalogy-catalog = { path = "../catalogy-catalog" }
catalogy-embed = { path = "../catalogy-embed" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
rust-embed = "8"
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
