[package]
name = "catalogy-transcode"
version = "0.1.0"
edition = "2021"

[dependencies]
catalogy-core = { path = "../catalogy-core" }
catalogy-queue = { path = "../catalogy-queue" }
catalogy-metadata = { path = "../catalogy-metadata" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
